fixes some styling that I previously messed up

--- a/app/views/partials/booksearch.ejs
+++ b/app/views/partials/booksearch.ejs
@@ -14,13 +14,12 @@
                             
                                 <input type="hidden" name="title" value="<%= item.title %>">
 
-                                    <input type="hidden" name="authors" value="<%= item.authors %>">
+                                    <img src="img/movie-poster.png" alt="<%= item.title %>" width="200" height="248" />
 
                                     <input type="hidden" name="image" value="<%= item.image %>">
 
-                                    <input type="hidden" name="user_id" value="1">
                                     <br />
-                                    
+
                                     <button type="submit" class="btn btn-primary register-btn">Add Book
                                     </button>
                                 </form>
@@ -34,8 +33,6 @@
                                     <input type="hidden" name="authors" value="<%= item.authors %>">
 
                                     <input type="hidden" name="image" value="<%= item.image %>">
-
-                                    <input type="hidden" name="user_id" value="1">
 
                                     <br />
                                     <button type="submit" class="btn btn-primary register-btn">Add Book
